# PachislotDataCounter

./: .gitattributes  .gitignore  CLAUDE.md  README.md  restart.sh  run.sh  setup_all.sh  test.sh
app/: db.py  main.py  serial_reader.py
host/: .env.example  README.md  config.json  pyproject.toml  requirements.txt
host/app/: db.py  events.py  game_counter.py  main.py  nfc_reader.py  payout_tracker.py  serial_reader.py  session_manager.py
host/scripts/: install_service.sh  mock_server.py  replay_log.py  setup_apt.sh  setup_nfc.sh  setup_python.sh
host/static/: app.js  index.html  labels.json  register.html  settings.html  style.css
host/systemd/: pachislot-data-counter.service
pico/: README.md  main.py
pico-edge-reader/: README.md  main.py
pico-edge-reader/scripts/: flash.sh  setup.sh
pico/scripts/: flash.sh  setup.sh
static/: app.js  index.html  style.css
systemd/: pachislot-data-counter.service
